fix(TDP-3931): wrong alignement when renaming a column (#656)

--- a/dataprep-webapp/src/app/components/datagrid/header/_datagrid-header.scss
+++ b/dataprep-webapp/src/app/components/datagrid/header/_datagrid-header.scss
@@ -64,14 +64,20 @@
 			letter-spacing: 0.06rem;
 		}
 
-		.grid-header-title-input {
-			margin-bottom: 0;
-			padding: 0;
+		.grid-header-title-form {
+			position: absolute;
 			padding-right: 1.5rem;
-			font-family: $sourcesanspro;
-			font-size: 1.2rem;
-			color: $datagrid-header-color;
-			background: transparent;
+			top: 0;
+
+			.grid-header-title-input {
+				margin-bottom: 0;
+				padding: 0;
+				font-family: $sourcesanspro;
+				font-size: 1.2rem;
+				color: $datagrid-header-color;
+				background: transparent;
+				height: 24px;
+			}
 		}
 	}
 
